# mcp-word

./: .dockerignore  BATCH_TOOLS_MIGRATION.md  CLAUDE.md  COOLIFY_DEPLOYMENT.md  COOLIFY_SETUP.md  DOCUMENT_DOWNLOAD_IMPLEMENTATION_PLAN.md  DOWNLOAD_FEATURE.md  Dockerfile  EXPLICACION_REDUCCION_LLAMADAS.md  HETZNER_QUICK_START.md  N8N_INTEGRATION_GUIDE.md  NEW_FEATURES_SUMMARY.md  POSIBILIDADES_STORAGE.md  README.md  SYSTEM_PROMPT_FINAL_N8N.md  TROUBLESHOOTING_DOWNLOAD_LINKS.md  docker-compose.yml  nixpacks.toml  perfect_system_message.md  pyproject.toml  requirements.txt  simple_test.py  test_base.docx  test_batch_tools.py  test_chat_workflow.py  test_core_download_logic.py  test_download_feature.py  test_download_link_tool.py  test_large_document.py  test_mcp_server.py  test_resolver_logic.py
office_word_mcp_server/: __main__.py
word_document_server/: main.py
word_document_server/tools/: batch_document_tools.py  content_tools.py  format_tools.py
word_document_server/utils/: document_utils.py
